Demo initial commit

--- a/index.html
+++ b/index.html
@@ -112,14 +112,14 @@
     </div>
 
 
-    <script src="./jquery/dist/jquery.min.js"></script>
-    <script src="./scripts/vendor/awesomplete.min.js"></script>
+    <script src="scripts/vendor/jquery.min.js"></script>
+    <script src="scripts/vendor/awesomplete.min.js"></script>
 
-    <script src="./scripts/annotation.js"></script>
-    <script src="./scripts/editor.js"></script>
-    <script src="./scripts/annotator.js"></script>
+    <script src="scripts/annotation.js"></script>
+    <script src="scripts/editor.js"></script>
+    <script src="scripts/annotator.js"></script>
   
-    <script src="./scripts/app.js"></script>
+    <script src="scripts/app.js"></script>
 
 </body>
 </html>
