--- a/example/index.html
+++ b/example/index.html
@@ -27,88 +27,101 @@
     </script>
     
     <div class="container">
-        <div id="book" class="highlightable">
+        <div class="content">
+            <div class="header">
+                <h1>Annotator</h1>
+                <p>
+                    Highlight, share, add notes and tags to any selected text on a page
+                </p>
+            </div>
 
-            <h2>7.1 Deforestation and Its Causes</h2>
-            <p>
-                A great variety of plants and animals exists on earth. They are essential for the wellbeing and survival of mankind. Today, a major threat to survival of these organisms is deforestation. We know that deforestation means clearing of forests and using that land for other purposes.
-            </p>
+            <div id="book" class="highlightable">
 
-            <p>
-                Trees in the forest are cut for some of the purposes mentioned below:
-            </p>
+                <h2>7.1 Deforestation and Its Causes</h2>
+                <p>
+                    A great variety of plants and animals exists on earth. They are essential for the wellbeing and survival of mankind. Today, a major threat to survival of these organisms is deforestation. We know that deforestation means clearing of forests and using that land for other purposes.
+                </p>
 
-            <ul>
-                <li>Procuring land for cultivation.</li>
-                <li>Building houses and factories.</li>
-                <li>Making furniture or using wood as fuel.</li>
-            </ul>
+                <p>
+                    Trees in the forest are cut for some of the purposes mentioned below:
+                </p>
 
-            <p>
-                Some natural causes of deforestation are forest fires and severe droughts.
-            </p>
+                <ul>
+                    <li>Procuring land for cultivation.</li>
+                    <li>Building houses and factories.</li>
+                    <li>Making furniture or using wood as fuel.</li>
+                </ul>
 
-
-            <h3>Activity 7.1</h3>
-            <p class="activity">
-                Add more causes of deforestation to your list and classify them into natural and man-made.
-            </p>
-
-
-            <h2>7.2 Consequences of Deforestation</h2>
-            <p>
-                Paheli and Boojho recalled the consequences of deforestation. They remembered that deforestation increases the temperature and pollution level on the earth. It increases the level of carbon dioxide in the atmosphere. Ground water level also gets lowered. They know that deforestation disturbs the balance in nature. They were told by Prof. Ahmad that if cutting of trees continues, rainfall and the fertility of the soil will decrease.
-            </p>
-
-            <p>
-                How does deforestation reduce rainfall on the one hand and lead to floods on the other?
-            </p>
-
-            <p>
-                Moreover, there will be increased chances of natural calamities such as floods and droughts. Recall that plants need carbon dioxide for photosynthesis. Fewer trees would mean that less carbon dioxide will be used up resulting in its increased amount in the atmosphere. This will lead to global warming as carbon dioxide traps the heat rays reflected by the earth. The increase in temperature on the earth disturbs the water cycle and may reduce rainfall. This could cause droughts.
-            </p>
-
-            <p>
-                Deforestation is a major cause which leads to the change in soil properties. Physical properties of the soil get affected by plantation and vegetation. Recall from Class VII how trees prevent soil erosion. Fewer trees result in more soil erosion. Removal of the top layer of the soil exposes the lower, hard and rocky layers. This soil has less humus and is less fertile. Gradually the fertile land gets converted into deserts. It is called desertification.
-            </p>
-
-            <p>
-                Deforestation also leads to a decrease in the water holding capacity of the soil. The movement of water from the soil surface into the ground (infiltration rate) is reduced. So, there are floods. The other properties of the soil like nutrient content, texture, etc., also change because of deforestation.
-            </p>
+                <p>
+                    Some natural causes of deforestation are forest fires and severe droughts.
+                </p>
 
 
-            <h3>Activity 7.2</h3>
-            <p class="activity">
-                Animal life is also affected by deforestation. How? List the points and discuss them in your class.
-            </p>
+                <h3>Activity 7.1</h3>
+                <p class="activity">
+                    Add more causes of deforestation to your list and classify them into natural and man-made.
+                </p>
 
 
-            <h2>7.3 Conservation of Forest and Wildlife</h2>
-            <p>
-                Having become aware of the effects of deforestation, Paheli and Boojho are worried. They go to Prof. Ahmad and ask him how forests and wildlife can be saved.
-            </p>
-            <p>
-                Prof. Ahmad organises a visit to a biosphere reserve for Paheli, Boojho and their classmates. He selects a place named Pachmarhi Biosphere Reserve. He knows that the plants and animals found here are similar to those of the upper Himalayan peaks and to those belonging to the lower western ghats. Prof. Ahmad believes that the biodiversity found here is unique. He requests Madhavji, a forest employee, to guide the children inside the biosphere reserve. He explains that preserving areas of such biological importance make them a part of our national heritage.
-            </p>
+                <h2>7.2 Consequences of Deforestation</h2>
+                <p>
+                    Paheli and Boojho recalled the consequences of deforestation. They remembered that deforestation increases the temperature and pollution level on the earth. It increases the level of carbon dioxide in the atmosphere. Ground water level also gets lowered. They know that deforestation disturbs the balance in nature. They were told by Prof. Ahmad that if cutting of trees continues, rainfall and the fertility of the soil will decrease.
+                </p>
 
-            <p>
-                Biosphere is that part of the earth in which living organisms exist or which supports life. Biological diversity or biodiversity, refers to the variety of organisms existing on the earth, their interrelationships and their relationship with the environment.
-            </p>
+                <p>
+                    How does deforestation reduce rainfall on the one hand and lead to floods on the other?
+                </p>
 
-            <p>
-                Madhavji explains to the children that apart from our personal efforts and efforts of the society, government agencies also take care of the forests and animals. The government lays down rules, methods and policies to protect and conserve them. Wildlife sanctuaries, national parks, biosphere reserves, etc., are protected areas for conservation of plants and animals present in that area.
-            </p>
+                <p>
+                    Moreover, there will be increased chances of natural calamities such as floods and droughts. Recall that plants need carbon dioxide for photosynthesis. Fewer trees would mean that less carbon dioxide will be used up resulting in its increased amount in the atmosphere. This will lead to global warming as carbon dioxide traps the heat rays reflected by the earth. The increase in temperature on the earth disturbs the water cycle and may reduce rainfall. This could cause droughts.
+                </p>
 
-            <p>
-                To protect our flora and fauna and their habitats, protected areas called sanctuaries, national parks and biosphere reserves have been earmarked. Plantation, cultivation, grazing, felling trees, hunting and poaching are prohibited there. Sanctuary : Areas where animals are protected from any disturbance to them and their habitat.
-            </p>
+                <p>
+                    Deforestation is a major cause which leads to the change in soil properties. Physical properties of the soil get affected by plantation and vegetation. Recall from Class VII how trees prevent soil erosion. Fewer trees result in more soil erosion. Removal of the top layer of the soil exposes the lower, hard and rocky layers. This soil has less humus and is less fertile. Gradually the fertile land gets converted into deserts. It is called desertification.
+                </p>
 
-            <p>
-                National Park : Areas reserved for wild life where they can freely use the habitats and natural resources. Biosphere Reserve : Large areas of protected land for conservation of wild life, plant and animal resources and traditional life of the tribals living in the area.
-            </p>
+                <p>
+                    Deforestation also leads to a decrease in the water holding capacity of the soil. The movement of water from the soil surface into the ground (infiltration rate) is reduced. So, there are floods. The other properties of the soil like nutrient content, texture, etc., also change because of deforestation.
+                </p>
+
+
+                <h3>Activity 7.2</h3>
+                <p class="activity">
+                    Animal life is also affected by deforestation. How? List the points and discuss them in your class.
+                </p>
+
+
+                <h2>7.3 Conservation of Forest and Wildlife</h2>
+                <p>
+                    Having become aware of the effects of deforestation, Paheli and Boojho are worried. They go to Prof. Ahmad and ask him how forests and wildlife can be saved.
+                </p>
+                <p>
+                    Prof. Ahmad organises a visit to a biosphere reserve for Paheli, Boojho and their classmates. He selects a place named Pachmarhi Biosphere Reserve. He knows that the plants and animals found here are similar to those of the upper Himalayan peaks and to those belonging to the lower western ghats. Prof. Ahmad believes that the biodiversity found here is unique. He requests Madhavji, a forest employee, to guide the children inside the biosphere reserve. He explains that preserving areas of such biological importance make them a part of our national heritage.
+                </p>
+
+                <p>
+                    Biosphere is that part of the earth in which living organisms exist or which supports life. Biological diversity or biodiversity, refers to the variety of organisms existing on the earth, their interrelationships and their relationship with the environment.
+                </p>
+
+                <p>
+                    Madhavji explains to the children that apart from our personal efforts and efforts of the society, government agencies also take care of the forests and animals. The government lays down rules, methods and policies to protect and conserve them. Wildlife sanctuaries, national parks, biosphere reserves, etc., are protected areas for conservation of plants and animals present in that area.
+                </p>
+
+                <p>
+                    To protect our flora and fauna and their habitats, protected areas called sanctuaries, national parks and biosphere reserves have been earmarked. Plantation, cultivation, grazing, felling trees, hunting and poaching are prohibited there. Sanctuary : Areas where animals are protected from any disturbance to them and their habitat.
+                </p>
+
+                <p>
+                    National Park : Areas reserved for wild life where they can freely use the habitats and natural resources. Biosphere Reserve : Large areas of protected land for conservation of wild life, plant and animal resources and traditional life of the tribals living in the area.
+                </p>
+            </div>
         </div>
 
-        <div id="cards"></div>
+        <footer class="main">
+            <p>
+                <a href="http://twitter.com/bharani91">bharanim</a> &middot; <a href="https://designventures.com">dvnc</a>
+            </p>
+        </footer>
     </div>
 
 
